<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:aix="http://schemas.android.com/apk/res-auto">
	
	<PreferenceCategory android:title="@string/header_widget_settings">
	
		<PreferenceScreen
				android:title="@string/unit_settings_title"
				android:summary="@string/unit_settings_summary">
			
			<PreferenceCategory
					android:title="@string/unit_settings_category">

				<ListPreference
						android:key="@string/temperature_units_string"
						android:title="@string/temperature_units_title"
						android:persistent="true"
						android:entries="@array/temperature_units_readable"
						android:entryValues="@array/temperature_units_code"
						android:defaultValue="1" />
		
				<ListPreference
						android:key="@string/precipitation_units_string"
						android:title="@string/precipitation_units_title"
						android:persistent="true"
						android:entries="@array/precipitation_units_readable"
						android:entryValues="@array/precipitation_units_code"
						android:defaultValue="1" />
						
				<EditTextPreference
						android:key="@string/precipitation_scaling_string"
						android:title="@string/precipitation_scaling_title_mm"
						android:persistent="true"
						android:defaultValue="@string/precipitation_scaling_mm_default"
						android:inputType="numberDecimal"
						android:selectAllOnFocus="true" />
			
			</PreferenceCategory>
		
		</PreferenceScreen>

		<PreferenceScreen
				android:title="@string/ui_settings_title"
				android:summary="@string/ui_settings_summary">
		
			<PreferenceCategory
					android:title="@string/ui_settings_category_widget">
					
				<net.veierland.aix.ColorPreference
						android:key="@string/background_color_int"
						android:title="@string/background_color_title"
						android:defaultValue="@color/background"
						android:persistent="true" />
	
				<net.veierland.aix.ColorPreference
						android:key="@string/pattern_color_int"
						android:title="@string/pattern_color_title"
						android:defaultValue="@color/pattern"
						android:persistent="true" />
						
				<net.veierland.aix.ColorPreference
						android:key="@string/text_color_int"
						android:title="@string/text_color_title"
						android:defaultValue="@color/text"
						android:persistent="true" />
				
				<ListPreference
						android:key="@string/top_text_visibility_string"
						android:title="@string/top_text_visibility_title"
						android:persistent="true"
						android:entries="@array/top_text_visibility_readable"
						android:entryValues="@array/top_text_visibility_code"
						android:defaultValue="@string/top_text_visibility_default" />
		
			</PreferenceCategory>
			
			<PreferenceCategory
					android:title="@string/ui_settings_category_border">
				
				<CheckBoxPreference
						android:key="@string/border_enabled_bool"
						android:title="@string/border_enabled_title"
						android:persistent="true"
						android:defaultValue="true"
						android:summaryOn="@string/border_enabled_summary_on"
						android:summaryOff="@string/border_enabled_summary_off" />
				
				<net.veierland.aix.ColorPreference
						android:key="@string/border_color_int"
						android:title="@string/border_color_title"
						android:dependency="@string/border_enabled_bool"
						android:defaultValue="@color/border"
						android:persistent="true" />
				
				<EditTextPreference
						android:key="@string/border_thickness_string"
						android:title="@string/border_thickness_title"
						android:dependency="@string/border_enabled_bool"
						android:persistent="true"
						android:defaultValue="@string/border_thickness_default"
						android:inputType="numberDecimal"
						android:selectAllOnFocus="true" />
				
				<EditTextPreference
						android:key="@string/border_rounding_string"
						android:title="@string/border_rounding_title"
						android:summary="@string/border_rounding_summary"
						android:persistent="true"
						android:defaultValue="@string/border_rounding_default"
						android:inputType="numberDecimal"
						android:selectAllOnFocus="true" />
				
			</PreferenceCategory>

			<PreferenceCategory
					android:title="@string/ui_settings_category_day_effect">
			
				<CheckBoxPreference
						android:key="@string/day_effect_bool"
						android:title="@string/day_effect_title"
						android:persistent="true"
						android:defaultValue="true"
						android:summaryOn="@string/day_effect_summary_on"
						android:summaryOff="@string/day_effect_summary_off" />
			
				<net.veierland.aix.ColorPreference
						android:key="@string/day_color_int"
						android:title="@string/day_color_title"
						android:defaultValue="@color/day"
						android:persistent="true"
						android:dependency="@string/day_effect_bool" />
				
				<net.veierland.aix.ColorPreference
						android:key="@string/night_color_int"
						android:title="@string/night_color_title"
						android:defaultValue="@color/night"
						android:persistent="true"
						android:dependency="@string/day_effect_bool" />
			
			</PreferenceCategory>
			
			<PreferenceCategory
					android:title="@string/ui_settings_category_grid">
			
				<net.veierland.aix.ColorPreference
						android:key="@string/grid_color_int"
						android:title="@string/grid_color_title"
						android:defaultValue="@color/grid"
						android:persistent="true" />
				
				<net.veierland.aix.ColorPreference
						android:key="@string/grid_outline_color_int"
						android:title="@string/grid_outline_color_title"
						android:defaultValue="@color/grid_outline"
						android:persistent="true" />
			
			</PreferenceCategory>
			
			<PreferenceCategory
					android:title="@string/ui_settings_category_indicator">
			
				<net.veierland.aix.ColorPreference
						android:key="@string/max_rain_color_int"
						android:title="@string/max_rain_color_title"
						android:defaultValue="@color/maximum_rain"
						android:persistent="true" />
				
				<net.veierland.aix.ColorPreference
						android:key="@string/min_rain_color_int"
						android:title="@string/min_rain_color_title"
						android:defaultValue="@color/minimum_rain"
						android:persistent="true" />
				
				<net.veierland.aix.ColorPreference
						android:key="@string/above_freezing_color_int"
						android:title="@string/above_freezing_color_title"
						android:defaultValue="@color/above_freezing"
						android:persistent="true" />
				
				<net.veierland.aix.ColorPreference
						android:key="@string/below_freezing_color_int"
						android:title="@string/below_freezing_color_title"
						android:defaultValue="@color/below_freezing"
						android:persistent="true" />
			
			</PreferenceCategory>
			
		</PreferenceScreen>		
	
	</PreferenceCategory>
	
	<PreferenceCategory
			android:title="@string/header_system_settings">

		<PreferenceScreen
				android:title="@string/system_settings_title"
				android:summary="@string/system_settings_summary">
			
			<PreferenceCategory
					android:title="@string/system_settings_category">
			
				<ListPreference
						android:key="@string/preference_provider_string"
						android:title="@string/provider_title"
						android:persistent="true"
						android:entries="@array/provider_readable"
						android:entryValues="@array/provider_code"
						android:defaultValue="1" />
			
				<CheckBoxPreference
						android:key="@string/preference_awake_only_bool"
						android:title="@string/awake_only_title"
						android:persistent="true"
						android:summaryOn="@string/awake_only_summary_on"
						android:summaryOff="@string/awake_only_summary_off" />
				
				<CheckBoxPreference
						android:key="@string/preference_wifi_only_bool"
						android:title="@string/wifi_only_title"
						android:persistent="true"
						android:summaryOn="@string/wifi_only_summary_on"
						android:summaryOff="@string/wifi_only_summary_off" />
				
				<ListPreference
							android:key="@string/preference_update_rate_string"
							android:title="@string/update_rate_title"
							android:summary="@string/update_rate_summary"
							android:persistent="true"
							android:entries="@array/preference_update_rates_readable"
							android:entryValues="@array/preference_update_rates_code"
							android:defaultValue="0" />
			
			</PreferenceCategory>
		
		</PreferenceScreen>
		
		<Preference android:key="@string/device_profiles_key"
					android:title="@string/device_profiles_title"
					android:summary="@string/device_profiles_summary" />
	
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/header_location_settings">
		
		<Preference android:title="@string/location_settings_title"
					android:key="@string/location_settings_key" />

	</PreferenceCategory>

</PreferenceScreen>
