<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
	
	<ListView android:id="@+id/android:list"
			android:layout_width="match_parent"
			android:layout_height="0dip"
			android:layout_weight="1"
			android:drawSelectorOnTop="false"
			android:scrollbarAlwaysDrawVerticalTrack="true" />
	
	<LinearLayout android:id="@+id/android:empty"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="0dip"
			android:layout_weight="1">
	
		<TextView android:id="@+id/ListItemTitle"
				android:text="@string/location_selector_no_items_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge" />
		
		<TextView android:id="@+id/ListItemText"
				android:text="@string/location_selector_no_items_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall" />
	
	</LinearLayout>
	
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:background="@android:drawable/bottom_bar">

        <View	android:layout_width="0dip"
        		android:layout_height="match_parent"
        		android:layout_weight="1" />

        <Button android:id="@+id/add_location_button"
        		android:layout_width="0dip"
        		android:layout_height="wrap_content"
        		android:layout_weight="2"
        		android:layout_marginTop="5dip"
        		android:text="@string/button_add_location" />

        <View	android:layout_width="0dip"
        		android:layout_height="match_parent"
        		android:layout_weight="1" />
	
	</LinearLayout>

</LinearLayout>

